k8s/site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
  labels: {app: site}
spec:
  selector: {app: site}
  ports:
    - name: http
      port: 80
      targetPort: http
